Fixed disproportionate padding issue on the .todo-list class. Previously, there was extra padding on the left and right sides.

--- a/28_Build_a_Stylized_To_Do_List/styles.css
+++ b/28_Build_a_Stylized_To_Do_List/styles.css
@@ -25,6 +25,9 @@ h1 {
     border-radius: 10px;
     position: relative;
 }
+.todo-list {
+  padding: 0;
+}
 li {
     display: list-item;
     unicode-bidi: isolate;
